[package]
name = "client-sdk-tokio"
version = "0.1.0"
authors = ["ttang <d_ttang@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.16", features=["full"] }
futures = "0.3.4"

# [lib]
# crate-type = ["staticlib", "cdylib"]
